--- a/docs/en/toc.yaml
+++ b/docs/en/toc.yaml
@@ -1,3 +1,18 @@
+# title: Documentation Project Template
+# href: index.yaml
+# items: 
+#   - name: About
+#     href: about.md
+#   - name: Additional page 
+#     href: page.md
+#       items: 
+#       - name: Another page 
+#         href: anotherpage.md
+#   - name: Sub-Section 
+#     include:
+#       path: sub-section/toc.yaml
+#       mode: link
+
 title: Documentation Project Template
 href: index.yaml
 items: 
