--- a/docs/en/toc.yaml
+++ b/docs/en/toc.yaml
@@ -1,6 +1,8 @@
 title: Documentation Project Template
 href: index.yaml
 items:
+  - name: some file
+    href: some-file.md
   - name: About
     href: about.md
   - name: Additional page
