--- a/docs/en/toc.yaml
+++ b/docs/en/toc.yaml
@@ -2,7 +2,7 @@ title: Documentation Project Template
 href: index.yaml
 items:
   - name: some file
-    href: some-file.md
+    href: test-folder-with-md/some-file.md
   - name: About
     href: about.md
   - name: Additional page
