--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,5 +1,4 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Deploy Docs
 
 on:
   push:
@@ -28,18 +27,23 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v5
         
-      # Добавленный блок сборки документации
       - name: Build docs
         uses: diplodoc-platform/docs-build-action@v3
         with:
           src-root: './docs'
           build-root: './docs-html'
-          output-path: "."  # Важный параметр для корректного пути
+          
+      # Фикс структуры файлов
+      - name: Prepare artifact
+        run: |
+          mv ./docs-html/en/* ./docs-html/
+          rm -rf ./docs-html/en
+          echo '<meta http-equiv="refresh" content="0; url=/index.html">' > ./docs-html/index.html
           
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './docs-html'  # Исправленный путь вместо '.'
+          path: './docs-html'
           
       - name: Deploy to GitHub Pages
         id: deployment
