--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,20 +1,27 @@
-name: Deploy Docs
+name: Deploy static content to Pages
 
 on:
+  # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
+
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
+  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
@@ -23,28 +30,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        
       - name: Setup Pages
         uses: actions/configure-pages@v5
-        
       - name: Build docs
         uses: diplodoc-platform/docs-build-action@v3
         with:
           src-root: './docs'
           build-root: './docs-html'
-          
-      # Фикс структуры файлов
-      - name: Prepare artifact
-        run: |
-          mv ./docs-html/en/* ./docs-html/
-          rm -rf ./docs-html/en
-          echo '<meta http-equiv="refresh" content="0; url=/index.html">' > ./docs-html/index.html
-          
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './docs-html'
-          
+          # Upload entire repository
+          path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
